--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#** GENERATED CONTENT ** Mule Application Deployment Descriptor
-redeployment.enabled=true
+#Wed Dec 25 00:10:05 AEDT 2019
 encoding=UTF-8
-config.resources=api-weather-v1.xml,config.xml,getweatherdetails.xml,postuserdetails.xml
 domain=default
+redeployment.enabled=true
+config.resources=api-weather-v1.xml,postuserdetails.xml,getweatherdetails.xml,config.xml
