--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,7 @@
+api.name=groupId:efe6b1f5-7db4-4250-a1a5-93bd66d8cbfc:assetId:weather
+api.version= v1:15938089
+
+
 http.host=localhost
 http.port=8081
 http.basePath=/api/v1/user
